tests/baselines/reference/invokingNonGenericMethodWithTypeArguments1.errors.txt
==== tests/cases/compiler/invokingNonGenericMethodWithTypeArguments1.ts (1 errors) ====
    class Foo {
        constructor() {
            this.foo<string>();
                 ~~~
!!! invokingNonGenericMethodWithTypeArguments1.ts(3,14): error TS2094: The property 'foo' does not exist on value of type 'Foo'.
        }
    }
    